--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -36,7 +36,7 @@
             <input class="form-control" type="password" name="confirmSenha" id="confirmSenha"
               placeholder="Confirme sua senha">
           </div>
-          
+
  <div class="form-group">
             <label for="tipo">Tipo de Usuário</label>
             <select class="form-control" name="tipo" id="tipo" >
@@ -48,7 +48,7 @@
 
 
           <div class="d-flex justify-content-center">
-            <button type="submit" class="btn btn-danger mr-4" routerLink='/entrar'>Cancelar</button>
+            <button type="submit" class="btn btn-danger mr-4" routerLink="/entrar">Cancelar</button>
             <button type="submit" class="btn btn-success">Cadastrar</button>
           </div>
 
