--- a/src/app/entrar/entrar.component.css
+++ b/src/app/entrar/entrar.component.css
@@ -1,5 +1,5 @@
 #img-bg{
-  background-image: url('https://imgur.com/A8M1OX0');
+  background-image: url('https://i.imgur.com/A8M1OX0.jpg');
 
   min-height: 695px;
 
