--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -20,7 +20,7 @@
           </div>
 
         <div class="d-flex justify-content-center">
-          <button type="submit" class="btn-success">
+          <button type="submit" class="btn-success" >
             Entrar
           </button>
         </div>
@@ -28,7 +28,7 @@
           <hr class="mt-5 mb-5">
 
           <p class="text-center">
-            Não tem uma conta? <a routerLink='/cadastrar'>Cadastre-se</a>
+            Não tem uma conta? <a routerLink="/cadastrar">Cadastre-se</a>
           </p>
 
 
